--- a/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -1,27 +1,48 @@
 .product-crud-card {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
+  padding-bottom: 20px;
 }
 
 .product-crud-card-top-container {
-    text-align: center;
-    padding: 16px 0;
-    border-bottom: 1px solid #e1e1e1;
+  text-align: center;
+  padding: 16px 0;
+  border-bottom: 1px solid #e1e1e1;
 }
 
 .product-crud-card-top-container img {
-    width: 158px;
-    height: 158px;
+  width: 158px;
+  height: 158px;
 }
 
 .product-crud-card-botton-container {
-    padding: 15px 20px 30px 20px;
+  padding: 15px 20px 30px 20px;
 }
 
-.product-crud-card-botton-container h6{
-   font-size: 18px; 
+.product-crud-card-botton-container h6 {
+  font-size: 18px;
 }
 
 .product-crud-categories-container {
-   padding: 0 20px; 
-   display: flex;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 20px;
+}
+
+.product-crud-card-buttons-container {
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-crud-card-button {
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: -0.015;
+  border-radius: 10px;
+  will-change: 110px;
+  height: 40px;
+}
+
+.product-crud-card-button-first {
+  margin-right: 10px;
 }
