--- a/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontweb/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -40,7 +40,7 @@
   font-size: 14px;
   letter-spacing: -0.015;
   border-radius: 10px;
-  will-change: 110px;
+  width: 110px;
   height: 40px;
 }
 
